<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Calendar!</string>
    <string name="app_name">Cal</string>
    <string name="prevMonth">前月</string>
    <string name="nextMonth">翌月</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    
</resources>
